[package]
name = "check_land"
version = "0.1.0"
author = "Francesco Roda"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
web3 = "0.17.0"
tokio = { version= "1", features = ["full"] }
dotenv = "0.15.0"
clap = { version = "3.1.18", features = ["derive"] }